2008-07-08 10:42  rasp

	* src/TrackPair.cc: New class used to associate tracks coming from
	  neutral vertices

2008-07-08 10:41  rasp

	* include/TrackPair.h: New class used for association of tracks
	  constituting neutral vertices

2008-06-06 09:30  gaede

	* BuildSetup.cmake, CMakeLists.txt, ChangeLog, doc/release.notes:
	  ---------- v00-08 -----------------

2008-06-05 15:47  rasp

	* include/HelixClass.h, src/HelixClass.cc: Updated HelixClass. A
	  new method added which identifies neutral vertecies constituted
	  by the two helical tracks

2008-05-20 10:56  aplin

	* include/random.h, src/CutOnCosThetaQQbar.cc, src/MarlinCED.cc,
	  src/MarlinDrawUtil.cc, src/PseudoHistogram.cc, src/ann/ANN.cpp,
	  src/ann/kd_dump.cpp: cleaned up and added includes to make gcc4.3
	  compliant

2008-04-16 17:04  gaede

	* ChangeLog, doc/release.notes: -------- version v00-07
	  --------------------

2008-04-16 17:03  gaede

	* include/SelectEvents.h: added documentation

2008-04-16 16:36  gaede

	* CMakeLists.txt: ------- version v00-07 -----------------

2008-04-16 16:33  gaede

	* include/MarlinCED.h, src/MarlinCED.cc: modfied
	  MarlinCED::newEvent to not draw detector for modelID=-1

2008-04-16 16:31  gaede

	* src/TrackwiseClusters.cc: fixed 'possible undefined variable'
	  warning w/ calohitAttachTo

2008-04-16 10:18  engels

	* src/SelectEvents.cc: removed AIDA #includes (not used anywhere in
	  this processor)

2008-04-09 23:25  samson

	* CMakeLists.txt: Set compiler flag to avoid miscompilation due to
	  optimisation

2008-04-04 17:13  samson

	* src/MarlinCED.cc: remove/comment unused variables to avoid
	  compiler warnings

2008-04-04 15:43  gaede

	* ChangeLog, include/HelixClass.h, src/HelixClass.cc: removed
	  incomplete function: HelixClass::getDistanceToHelix()

2008-04-04 15:12  samson

	* src/: ClusterExtended.cc, ClusterShapes.cc, HelixClass.cc:
	  remove/comment unused variables to avoid compiler warnings

2008-04-02 14:44  samson
