@@ -5,6 +5,13 @@
 ================================
 
  --------
+| v00-10 |
+ --------
+    * removed duplicated code from CED 
+      -> made dependant on CED ( >= v00-04-01 ) 
+     
+
+ --------
 | v00-09 |
  --------
 
